Fix list.php horizontal scroll bar height

--- a/assets/css/style_list.css
+++ b/assets/css/style_list.css
@@ -143,7 +143,7 @@ li {
 
 div#card-height {
     box-sizing: border-box;
-    height: 595px;
+    height: -webkit-fill-available;
 }
 
 .card {
